2008-07-18  Lloyd Bryant ("Sanga")  <lloyd_bryant@netzero.net>

	* Added code to provide viewable glove and shoe sprites

2008-07-11  Douglas Boffey  <DougABoffey@netscape.net>

	* Added code to avoid collision between different displayed text.

2008-07-08  Lloyd Bryant ("Sanga")	<lloyd_bryant@netzero.net>

	* Added handling for a "Stop Walking" packet.  This will
	  force the client back into sync during those "can't run
	  away from a battle" sync error conditions.

2008-07-07  Lloyd Bryant ("Sanga")	<lloyd_bryant@netzero.net>

	* Added support for update host provided by login server
	* Changed startup sequence to login first, then update

2008-07-05  Lloyd Bryant ("Sanga")  <lloyd_bryant@netzero.net>

	* Applied patch from kraant to convert into a TME branded client
	* Removed redundant autoconf files

2008-07-01  Douglas Boffey  <DougABoffey@netscape.net>

	* Split ChatWindow into ChatWindow, Recorder and Party.
	* Added /toggle command.

2008-06-28  Kevin Day  <blame582@gmail.com>

	* Updated configure and configure.ac to reflect tme version info.

2008-06-25  Kevin Day  <blame582@gmail.com>

	* Updated README added /commands and updated skill level listing.

2008-06-25  Douglas Boffey  <DougABoffey@netscape.net>

	* Added a command to display the characters present within hearing
	distance (/help present for details).
	* Removed the need to select the map server if only one available.
	* Added a text entry for the port to the login dialog.
	* Added the basis of the party subsystem. (/help party for details).
	* Added the recording subsystem (/help record for details).
	* Add a dropdown to the login dialog to make it easier to log in
	on different servers.
	* Made the chatlog entry sticky (Cancelled by a blank line) -
	TODO Make an option.

2008-06-24  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp, src/particle.h, src/particleemitter.cpp,
	src/particleemitter.h: Added particle property "follow-parent" which