@@ -127,10 +127,10 @@ void ItemDB::load()
 
         CHECK_PARAM(name, "");
         CHECK_PARAM(image, "");
-        // CHECK_PARAM(description, "");
-        // CHECK_PARAM(effect, "");
+        CHECK_PARAM(description, "");
+        CHECK_PARAM(effect, "");
         // CHECK_PARAM(type, 0);
-        CHECK_PARAM(weight, 0);
+        // CHECK_PARAM(weight, 0);
         // CHECK_PARAM(slot, 0);
 
 #undef CHECK_PARAM
